feat(tmux): better pane management

--- a/mod/home/terminal/tmux/tmux.conf
+++ b/mod/home/terminal/tmux/tmux.conf
@@ -15,10 +15,6 @@ bind-key -T config_mode u run-shell "$HOME/.tmux/plugins/tpm/bindings/update_plu
 
 bind -n 'M-d' command-prompt
 
-bind -n 'M-s' display-popup -E -w 40% "sesh connect \"$( sesh list -i | fzf --ansi --color=bg:{{ colors.background_alt1 }},bg+:{{ colors.background_alt1 }})\""
-bind -n 'M-S' run-shell 'sesh last'
-bind -n 'M-k' kill-session
-
 bind -n 'M-q' if-shell "$is_vim" "send-keys M-q" "kill-pane"
 bind -n 'M-Q' kill-session
 bind -n 'M-z' detach-client
@@ -54,10 +50,15 @@ bind -n 'M-f' resize-pane -Z
 
 bind -n 'M-Enter' copy-mode
 
+bind -n 'M-s' display-popup -E -w 40% "sesh connect \"$( sesh list -i | fzf --ansi --color=bg:{{ colors.background_alt1 }},bg+:{{ colors.background_alt1 }})\""
+bind -n 'M-S' run-shell 'sesh last'
+bind -n 'M-K' kill-session
+bind -n 'M-k' display-popup -E -w 80% -h 80% "tmux_kill horizontal"
 bind -n 'M-b' display-popup -E -w 80% -h 80% "tmux_send horizontal"
 bind -n 'M-B' display-popup -E -w 80% -h 80% "tmux_send vertical"
 bind -n 'M-j' display-popup -E -w 80% -h 80% "tmux_join horizontal"
 bind -n 'M-J' display-popup -E -w 80% -h 80% "tmux_join vertical"
+bind -n 'M-g' display-popup -E -w 80% -h 80% "tmux_go"
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
