feat(desktop): use flameshot on wayland

--- a/mod/home/desktop/flameshot/flameshot.ini
+++ b/mod/home/desktop/flameshot/flameshot.ini
@@ -9,5 +9,7 @@ savePathFixed=false
 showHelp=false
 showSidePanelButton=false
 showStartupLaunchMessage=false
+showDesktopNotification=false
+useGrimAdapter=true
 uiColor={{ theme.primary }}
 userColors=picker, {{ colors.red | stronger }}, {{ colors.orange | stronger }}, {{ colors.yellow | stronger }}, {{ colors.green | stronger }}, {{ colors.cyan | stronger }}, {{ colors.blue | stronger }}, {{ colors.magenta | stronger }}
