--- a/pkgs/nix-scripts/nix-theme/package.json
+++ b/pkgs/nix-scripts/nix-theme/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "main": "index.js",
   "bin": "index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "eslint . --fix"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
@@ -17,8 +21,6 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "globals": "^15.14.0"
   }
 }
