feat(cli.yazi): improve bindings

--- a/mod/home/cli/yazi/config/keymap.toml
+++ b/mod/home/cli/yazi/config/keymap.toml
@@ -20,12 +20,15 @@ prepend_keymap = [
   { on = "<PageUp>", run = "arrow -50%" },
   { on = "<PageDown>", run = "arrow +50%" },
   { on = "<Space>", run = "toggle" },
-  { on = "<Tab>", run = "noop" },
+  { on = "<Tab>", run = [
+    "toggle",
+    "arrow next",
+  ] },
   { on = "i", run = "spot", desc = "info" },
   { on = ";", run = "noop" },
   { on = ":", run = "noop" },
-  { on = "s", run = "search --via=rg", desc = "search" },
-  { on = "S", run = "noop" },
+  { on = "s", run = "search --via=rg", desc = "ripgrep" },
+  { on = "S", run = "search --via=fd", desc = "fd" },
   { on = "z", run = "plugin zoxide", desc = "zoxide" },
   { on = "Z", run = "noop" },
   { on = "?", run = "noop" },
